gccida/c3/move_deaths
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12337:4: error: expected ';' after expression
rtx v24; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12337:5: error: use of undeclared identifier 'v24'
rtx v24; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12342:4: error: expected ';' after expression
rtx v29; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12342:5: error: use of undeclared identifier 'v29'
rtx v29; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12344:4: error: expected ';' after expression
rtx v31; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12344:5: error: use of undeclared identifier 'v31'
rtx v31; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12373:6: error: use of undeclared identifier 'v60'
rtx *v60; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12374:4: error: expected ';' after expression
rtx v61; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12374:5: error: use of undeclared identifier 'v61'
rtx v61; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12378:4: error: expected ';' after expression
rtx v65; // [rsp+10h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12378:5: error: use of undeclared identifier 'v65'
rtx v65; // [rsp+10h] [rbp-58h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12382:6: error: use of undeclared identifier 'v69'
rtx *v69; // [rsp+28h] [rbp-40h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12383:4: error: expected ';' after expression
rtx v70; // [rsp+30h] [rbp-38h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12383:5: error: use of undeclared identifier 'v70'
rtx v70; // [rsp+30h] [rbp-38h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12388:1: error: use of undeclared identifier 'v69'
v69 = pnotes; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12389:1: error: use of undeclared identifier 'v65'
v65 = to_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12398:22: error: expected expression
move_deaths( *( rtx *)&x[1], maybe_kill_insn, from_cuid, to_insn, pnotes); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12428:11: error: use of undeclared identifier 'v65'
to_insn = v65; 
          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/combine.c:12429:10: error: use of undeclared identifier 'v69'
pnotes = v69; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/move_deaths/src/obj/combine.o] Error 1
